@@ -45,12 +45,14 @@ import org.apache.druid.java.util.common.granularity.Granularities;
 import org.apache.druid.java.util.common.logger.Logger;
 import org.apache.druid.java.util.common.parsers.JSONPathSpec;
 import org.apache.druid.query.aggregation.AggregatorFactory;
+import org.apache.druid.query.aggregation.CountAggregatorFactory;
 import org.apache.druid.query.aggregation.DoubleMaxAggregatorFactory;
 import org.apache.druid.query.aggregation.DoubleMinAggregatorFactory;
 import org.apache.druid.query.aggregation.DoubleSumAggregatorFactory;
 import org.apache.druid.query.aggregation.FloatMaxAggregatorFactory;
 import org.apache.druid.query.aggregation.FloatMinAggregatorFactory;
 import org.apache.druid.query.aggregation.FloatSumAggregatorFactory;
+import org.apache.druid.query.aggregation.LongMaxAggregatorFactory;
 import org.apache.druid.query.aggregation.hyperloglog.HyperUniquesAggregatorFactory;
 import org.apache.druid.query.aggregation.hyperloglog.HyperUniquesSerde;
 import org.apache.druid.query.expression.TestExprMacroTable;
@@ -71,10 +73,11 @@ import java.io.IOException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
+
+import static org.apache.druid.query.QueryRunnerTestHelper.QUALITY_CARDINALITY;
 
 /**
  *
@@ -168,9 +171,7 @@ public class TestIndex
   public static final Interval DATA_INTERVAL = Intervals.of("2011-01-12T00:00:00.000Z/2011-05-01T00:00:00.000Z");
   private static final Logger log = new Logger(TestIndex.class);
   private static final VirtualColumns VIRTUAL_COLUMNS = VirtualColumns.create(
-      Collections.singletonList(
-          new ExpressionVirtualColumn("expr", "index + 10", ColumnType.FLOAT, TestExprMacroTable.INSTANCE)
-      )
+      new ExpressionVirtualColumn("expr", "index + 10", ColumnType.FLOAT, TestExprMacroTable.INSTANCE)
   );
   public static final AggregatorFactory[] METRIC_AGGS = new AggregatorFactory[]{
       new DoubleSumAggregatorFactory(DOUBLE_METRICS[0], "index"),
@@ -181,18 +182,26 @@ public class TestIndex
       new DoubleMaxAggregatorFactory(DOUBLE_METRICS[2], VIRTUAL_COLUMNS.getVirtualColumns()[0].getOutputName()),
       new HyperUniquesAggregatorFactory("quality_uniques", "quality")
   };
-  public static final ImmutableList<AggregateProjectionSpec> PROJECTIONS = ImmutableList.of(
-      new AggregateProjectionSpec(
-          "index_projection",
-          VirtualColumns.create(Granularities.toVirtualColumn(Granularities.DAY, "__gran")),
-          Arrays.asList(
-              new LongDimensionSchema("__gran"),
-              new StringDimensionSchema("market")
-          ),
-          new AggregatorFactory[]{new DoubleMaxAggregatorFactory("maxQuality", "qualityLong")}
-      )
+  public static final List<AggregateProjectionSpec> PROJECTIONS = List.of(
+      AggregateProjectionSpec.builder("daily_market_maxQuality")
+                             .virtualColumns(Granularities.toVirtualColumn(Granularities.DAY, "__gran"))
+                             .groupingColumns(
+                                 new LongDimensionSchema("__gran"),
+                                 new StringDimensionSchema("market")
+                             )
+                             .aggregators(new LongMaxAggregatorFactory("maxQuality", "qualityLong"))
+                             .build(),
+      AggregateProjectionSpec.builder("daily_countAndQualityCardinalityAndMaxLongNullable")
+                             .virtualColumns(Granularities.toVirtualColumn(Granularities.DAY, "__gran"))
+                             .groupingColumns(new LongDimensionSchema("__gran"))
+                             .aggregators(
+                                 new CountAggregatorFactory("count"),
+                                 QUALITY_CARDINALITY,
+                                 new LongMaxAggregatorFactory("longNullableMax", "longNumericNull")
+                             )
+                             .build()
   );
-  public static final IndexSpec INDEX_SPEC = IndexSpec.DEFAULT;
+  public static final IndexSpec INDEX_SPEC = IndexSpec.getDefault();
 
   public static final JsonInputFormat DEFAULT_JSON_INPUT_FORMAT = new JsonInputFormat(
       JSONPathSpec.DEFAULT,
@@ -510,16 +519,21 @@ public class TestIndex
   {
     try {
       File someTmpFile = File.createTempFile("billy", "yay");
-      someTmpFile.delete();
-      FileUtils.mkdirp(someTmpFile);
-      someTmpFile.deleteOnExit();
-
-      INDEX_MERGER.persist(index, someTmpFile, indexSpec, null);
+      someTmpFile = persist(index, indexSpec, someTmpFile);
       return INDEX_IO.loadIndex(someTmpFile);
     }
     catch (IOException e) {
       throw new RuntimeException(e);
     }
+  }
+
+  public static File persist(IncrementalIndex index, IndexSpec indexSpec, File path) throws IOException
+  {
+    path.delete();
+    FileUtils.mkdirp(path);
+    path.deleteOnExit();
+
+    return INDEX_MERGER.persist(index, path, indexSpec, null);
   }
 
 
